# notes_cli_editor

./: .gitignore  Cargo.toml  README.md
src/: cli.yml  config.rs  domain.rs  handler.rs  main.rs  persistence.rs  service.rs
