[package]
name = "xcon"
version = "0.1.0"
authors = ["Ranjith Raj D <ranjithraj.d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

RUST_BACKTRACE=1

[dependencies]
rusqlite = "0.23.1"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
mockall = "0.7.1"
log = "0.4.8"
cfg-if = "0.1.10"
